# netplay-demos

./: .env.sample  MODULE.bazel  README.md  config.py  pyproject.toml
game_client/: BUILD  client.py  main.py  main_client.py  pyproject.toml  socket_client.py
game_server/: BUILD  main.py  main_server.py  pyproject.toml  server.py
src/common/: common_models.py  component.py  constants.py  entity.py  game.proto  logging.py  world.py
src/common/game_pb2/: __init__.py  game_pb2.py
src/database/: models.py  redis_db.py  sqlite_db.py
src/game_client/: client.py
src/game_server/: game.py  server.py  server_main.py  ws_server.py
src/game_server/api/: http_server.py  websocket_server.py
