[project]
name = "game-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
    "ruff>=0.9.7",
    "websockets>=15.0",
    "picows>=1.8.0",
    "pydantic>=2.10.6",
]


[project.scripts]
client = 'bin.run_client:main'
# server = 'scripts/run_server:main'

[tool.uv]
package = true
